# ward

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SKILLS.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  snap.yml
scripts/: snap-install.sh  snap-uninstall.sh
snap/: snapcraft.yaml
src/ward/: __init__.py  cli.py  errors.py  manifest.py  preflight.py  workshop.py
src/ward/commands/: __init__.py  clean.py  clear.py  down.py  init.py  purge.py  sleep.py  status.py  up.py
tests/: test_init.py  test_manifest.py  test_up.py  test_workshop.py
