[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ward"
version = "0.1.3"
description = "Infrastructure coordinator for Canonical Workshop VMs and OpenCode agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
ward = "ward.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ward"]
