[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ward"
version = "0.1.4"
description = "Infrastructure coordinator for Canonical Workshop VMs and OpenCode agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
ward = "ward.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ward"]

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, high-signal rule set. Ruff also subsumes isort (I),
# pyupgrade (UP), and a slice of bugbear/simplify lints, so no separate
# black/isort/flake8 tooling is required.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["ward"]

[tool.ty.environment]
python-version = "3.12"
root = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
